[package]
name = "florence"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lol_html = "1"
tower-http = { version = "0.5", features = ["cors"] }
clap = { version = "4", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
